--- a/WhatIt/res/values/strings.xml
+++ b/WhatIt/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="app_name">CinesBus</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="acceso">Acceder</string>
+    <string name="title_activity_ingreso_perfil">IngresoPerfil</string>
+    <string name="title_activity_perfil">Perfil</string>
+    <string name="title_activity_perfil_producto">PerfilProducto</string>
+    <string name="desea">Desea</string>
+    <string name="oferta">Oferta</string>
 
 </resources>
